syntax = "proto3";

package gopm.rpc;
option go_package = ".;rpc";

import "google/protobuf/empty.proto";

service Gopm {
    // GetProcessInfo returns information on all current processes.
    rpc GetProcessInfo (google.protobuf.Empty) returns (ProcessInfoResponse);

    // StartProcess requests that some set of processes should start.
    // If some didn't start OK, the returned error includes a NotStartedError
    // detail.
    rpc StartProcess(StartStopRequest) returns (StartStopResponse);

    // StartAllProcesses requests that all processes should start.
    // If not all succeeded in starting, the returned error includes a NotStartedError
    // detail.
    rpc StartAllProcesses(StartStopAllRequest) returns (ProcessInfoResponse);

    // StopProcess requests that some set of processes should stop.
    rpc StopProcess(StartStopRequest) returns (StartStopResponse);

    // StopProcess requests that all processes should stop.
    rpc StopAllProcesses(StartStopAllRequest) returns (ProcessInfoResponse);

    // RestartProcess requests that some set of processes should start.
    // If some didn't start again OK, the returned error includes a NotStartedError
    // detail.
    rpc RestartProcess(StartStopRequest) returns (StartStopResponse);

    // Shutdown shuts down the gopm server, stopping all processes first.
    rpc Shutdown(google.protobuf.Empty) returns (google.protobuf.Empty);

    // ReloadConfig asks gopm to update its configuration by re-reading the configuration
    // directory.
    rpc ReloadConfig(google.protobuf.Empty) returns (ReloadConfigResponse);

    // TailLog returns log output of a process as a stream.
    rpc TailLog(TailLogRequest) returns (stream TailLogResponse);

    // SignalProcess sends a signal to a set of processes.
    rpc SignalProcess(SignalProcessRequest) returns (google.protobuf.Empty);

    // SignalProcess sends a signal to all processes.
    rpc SignalAllProcesses(SignalProcessRequest) returns (ProcessInfoResponse);

    // DumpConfig returns the fully rendered configuration data.
    rpc DumpConfig(google.protobuf.Empty) returns (DumpConfigResponse);
}

message VersionResponse {
    string version = 1;
}

message ProcessInfoResponse {
    repeated ProcessInfo processes = 1;
}

message ProcessInfo {
    string name = 1;
    string description = 3;
    int64 start = 4;
    int64 stop = 5;
    int64 now = 6;
    string state = 8;
    string spawn_err = 9;
    int64 exit_status = 10;
    string logfile = 11;
    int64 pid = 14;
}

message StartStopRequest {
    string name = 1;
    bool wait = 2;
    map<string, string> labels = 3;
}

message StartStopResponse {

}

message StartStopAllRequest {
    bool wait = 2;
}

message ReloadConfigResponse {
    // Previous removed tags ended at 3.
    // TODO add multiple errors so that gopmctl can print them.
}

message DumpConfigResponse {
	string ConfigJSON = 1;
}

message TailLogRequest {
    string name = 1;
    int64 backlogLines = 3;
    bool noFollow = 4;
}

message TailLogResponse {
    bytes lines = 1;
}

message SignalProcessRequest {
    string name = 1;
    // Note: old signal field had tag 2.
    map<string, string> labels = 3;
    string signal = 4;
}

// NotStartedError is used as error detail on the errors returned
// by some calls. It signifies that some processes did not start
// successfully.
message NotStartedError {
    // processNames holds the names of the processes that did not
    // successfully start.
    repeated string processNames = 1;
}
